--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,12 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: Yanbin
+avatar: /static/images/logo.png
+# occupation: Professor of Atmospheric Science
+# company: Stanford University
+email: ybtaimu@gmail.com
+twitter: https://x.com/ybtaimu
+# linkedin: https://www.linkedin.com
+github: https://github.com/JSjump
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
-
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Hello，大家好。这里是Yanbin。懂点前端，懂点后端，懂点链端。此博用于记录一些学习心得。相逢即是有缘，祝看到的人万事如意！：）
