feat(*): 浏览器渲染原理与事件循环

--- a/data/blog/browser/architecture.mdx
+++ b/data/blog/browser/architecture.mdx
@@ -75,6 +75,7 @@ Preconditions：Chrome Version >= 72
 - [Google官方blog](https://developer.chrome.com/blog/inside-browser-part1?hl=zh-cn)
 
 下面几个链接的内容差不多
+- [渲染原理](https://juejin.cn/post/7293820517375623168#heading-0)
 - [详细内容(部分已过时)](https://github.com/yacan8/blog/issues/28)
 - https://juejin.cn/post/6844904046411644941
 - https://juejin.cn/post/6844904158131126279?from=search-suggest
