feat(*): 新增引用文章链接

--- a/data/blog/browser/frame.mdx
+++ b/data/blog/browser/frame.mdx
@@ -149,3 +149,5 @@ JavaScript 有一个基于事件循环的并发模型，事件循环负责执行
 - [浏览器原理](https://juejin.cn/post/6844903684665507848?from=search-suggest#heading-3)
 
 - [事件循环与时间切片](https://segmentfault.com/a/1190000044483894#item-4-4)
+
+- [深入解析 EventLoop 和浏览器渲染、帧动画、空闲回调的关系](https://juejin.cn/post/6998154127763046437#heading-8)
