--- a/data/blog/backend/sql/function.mdx
+++ b/data/blog/backend/sql/function.mdx
@@ -3,7 +3,7 @@ title: sql 函数
 date: '2024-08-09'
 tags: ['backend', 'sql']
 draft: false
-summary: sql 语句执行顺序
+summary: sql 相关函数
 ---
 SQL中包含以下七种类型的函数：
 
