--- a/data/blog/手写系列/基于promise的请求重试.mdx
+++ b/data/blog/手写系列/基于promise的请求重试.mdx
@@ -1,7 +1,7 @@
 ---
 title: 基于promise的请求重试
 date: '2024-09-21'
-tags: ['JavaScript']
+tags: ['手写系列']
 draft: false
 summary:  promise
 ---
@@ -48,4 +48,6 @@ const retryPromise = (task,count,time) => {
 
 
 ```
+
+
 
