--- a/data/blog/c语言/pointer.mdx
+++ b/data/blog/c语言/pointer.mdx
@@ -34,7 +34,7 @@ void increment(int* p) {
 
 变量地址而不是变量值传入函数，还有一个好处。对于需要大量存储空间的大型变量，复制变量值传入函数，非常浪费时间和空间，不如传入指针来得高效。
 
-# \& 运算符
+# \&  取地址符
 
 `&`运算符用来取出一个变量所在的内存地址。
 
