--- a/data/blog/c语言/pointer.mdx
+++ b/data/blog/c语言/pointer.mdx
@@ -19,6 +19,15 @@ int* intPtr;
 上面示例声明了一个变量intPtr，它是一个指针，指向的内存地址存放的是一个整数
 
 
+## 指针的大小
+指针的大小与系统的体系结构（也称为字长）密切相关：
+
+    - `32 位系统`：在 32 位系统中，指针的大小通常是 `4 个字节（32 位）`，因为 32 位系统的内存地址空间是 4GB，地址需要 32 位来表示。
+    - `64 位系统`：在 64 位系统中，指针的大小通常是 `8 个字节（64 位）`，因为 64 位系统可以访问更大的内存地址空间，地址需要 64 位来表示。
+    
+因此，在 64 位系统中，任何类型的指针（无论是 char*、int* 还是 double*）的大小都是 8 个字节，因为它们都存储内存地址，而地址在 64 位系统中占 64 位（即 8 字节）。
+
+
 # \* 运算符
 
 `*`这个符号除了表示指针以外，还可以作为运算符，用来`取出指针变量所指向的内存地址里面的值`。
